WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
81068
ValueToInt32 speculation will cause OSR exits even when it does not have to
https://bugs.webkit.org/show_bug.cgi?id=81068
Summary
ValueToInt32 speculation will cause OSR exits even when it does not have to
Filip Pizlo
Reported
2012-03-13 18:48:56 PDT
Patch forthcoming.
Attachments
the patch
(5.36 KB, patch)
2012-03-13 18:56 PDT
,
Filip Pizlo
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2012-03-13 18:49:23 PDT
<
rdar://problem/11043926
>
Filip Pizlo
Comment 2
2012-03-13 18:56:53 PDT
Created
attachment 131770
[details]
the patch
Filip Pizlo
Comment 3
2012-03-13 19:55:47 PDT
Landed in
http://trac.webkit.org/changeset/110661
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug